[gd_scene load_steps=3 format=2]

[ext_resource path="res://app/objects/entities/npcs/scripts/npcGreen.gd" type="Script" id=1]
[ext_resource path="res://app/assets/sprites/npcs/npcGreen/npcGreen0.png" type="Texture" id=2]

[node name="npcGreen" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 1 )

[node name="npcSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="moveTimer" type="Timer" parent="."]
autostart = true
[connection signal="timeout" from="moveTimer" to="." method="_on_moveTimer_timeout"]
